# dsnp_projeto_ml

./: README.md  pyproject.toml
notebooks/: 01_load_raw_data.ipynb  02_exploratory_data_analysis.ipynb  03_transform_ts_data_into_features_and_targets.ipynb  04_transform_raw_data_into_training_data.ipynb
src/: data.py
